# gym_practive

./: pyproject.toml
gym_practice/: bowling_demo.py  callback_watch.py  eval_10sec.py  eval_5000step.py  hello_baselines.py  hello_gym.py  model_load.py  model_save.py  monitor.py  monitor_plot.py  multi_processing.py  tensorboard_watch.py
gym_practice/logs/: monitor.csv
gym_practice/logs/CartPole-v1/PPO_1/: events.out.tfevents.1681093798.KenSX14.24885.0
gym_practice/logs/ppo/CartPole-v1_1/: 0.monitor.csv  1.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  6.monitor.csv  7.monitor.csv  evaluations.npz
gym_practice/logs/ppo/CartPole-v1_1/CartPole-v1/: args.yml
