[tool.poetry]
name = "gym-practice"
version = "0.1.0"
description = ""
authors = ["Ken Matsuda <39686099+KenM-FS@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gym_practice"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
gymnasium = {extras = ["classic-control"], version = "^0.27.1"}
tensorflow = "^2.12.0"
stable-baselines3 = {extras = ["extra"], version = "^1.7.0"}
pyglet = "1.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
